# hotmart-tracker

./: .env.example  .gitignore  CLAUDE.md  SETUP_GUIDE.md  pyproject.toml  quick_test.py  requirements.txt  scraper_test.json
.github/workflows/: daily_pipeline.yml  pipeline.yml
scripts/: run_backtest.py  setup_db.py
sql/: schema.sql
src/: pipeline.py
src/alerts/: telegram.py
src/backtesting/: analyzer.py
src/core/: config.py  db.py  logger.py
src/scoring/: calculator.py  channel_filter.py  weights.py
src/scrapers/: hotmart.py  integrity.py
src/signals/: facebook.py  trends.py  youtube.py
tests/: test_alerts.py  test_channel_filter.py  test_integrity.py  test_pipeline_integration.py  test_scoring.py
